# squelch-tail-server

./: .gitignore  README.md  config.json  index.js  package-lock.json  package.json
plugins/squelch-tail-tr/: CMakeLists.txt  squelch_tail_uploader.cc
src/: api.js  banner.js  db.js  retention.js  storage.js  upload.js  ws-server.js
webclient/: index.html
